fixing live chat overlapping

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -237,6 +237,7 @@ body,
   height: 100%;
   width: 100%;
   background-color: antiquewhite;
+  overflow-y: scroll;
 }
 
 .course-page .course-image-container {
